# dynamic_node_switch

./: CMakeLists.txt  package.xml
cfg/: NodeSwitch.cfg
launch/: node_switch.launch
scripts/: change_enum.py  dynamic_node_switch_node.py
