<?xml version="1.0"?>
<package>
  <name>dynamic_node_switch</name>
  <version>0.1.0</version>
  <description>The dynamic reconfiguration demo package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
